--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: aprevoredo
 head: aprevoredo
 author: Hi, I'm André!
-description: 
+description: ...just a guy looking for new challenges :)
 ---
